--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src\\index.js",
-    "watch": "nodemon --inspect src\\index.js",
+    "watch": "nodemon --inspect -r node-localstorage\\register src\\index.js",
     "combine": "node-sass -w src\\resources\\scss\\style.scss src\\public\\css\\style.css"
   },
   "author": "minhty",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
@@ -20,7 +21,12 @@
     "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
+    "node-localstorage": "^2.2.1",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
